Màj foot Espagne
Erreurs corrigées sur l’infographie sur la domination de l’Espagne sur
le foot européen.

--- a/foot-espagne/Version anglaise/index.html
+++ b/foot-espagne/Version anglaise/index.html
@@ -30,25 +30,25 @@
 
     		<div id="chart3"></div>
     		<div id="legende">
-    			<div id="italy" data-pays="Italy">Italy : 41 titles</div>
-    			<div id="germany" data-pays="Germany">Germany : 37 titles</div>
-    			<div id="spain" data-pays="Spain">Spain : 37 titles</div>
-    			<div id="england" data-pays="England">Angleterre : 23 titles</div>
-    			<div id="netherlands" data-pays="Netherlands">Pays-Bas : 14 titles</div>
-    			<div id="france" data-pays="France">France : 13 titles</div>
+    			<div id="italy" data-pays="Italy">Italy : 26 titles</div>
+    			<div id="spain" data-pays="Spain">Spain : 26 titles</div>
+    			<div id="england" data-pays="England">England : 20 titles</div>
+    			<div id="germany" data-pays="Germany">Germany : 19 titles</div>
+    			<div id="netherlands" data-pays="Netherlands">Netherlands : 8 titles</div>
     			<div id="portugal" data-pays="Portugal">Portugal : 6 titles</div>
-    			<div id="russia" data-pays="Russia/USSR">Russia/USSR : 6 titles</div>
-    			<div id="denmark" data-pays="Denmark">Danemark : 4 titles</div>
-    			<div id="greece" data-pays="Greece">Greece : 4 titles</div>
-    			<div id="czechoslovakia" data-pays="Czechoslovakia">Czechoslovakia : 4 titles</div>
+    			<div id="france" data-pays="France">France : 4 titles</div>
+    			<div id="russia" data-pays="Russia/USSR">Russia/USSR : 3 titles</div>
     			<div id="sweden" data-pays="Sweden">Sweden : 2 titles</div>
+    			<div id="denmark" data-pays="Denmark">Denmark : 1 title</div>
+    			<div id="greece" data-pays="Greece">Greece : 1 title</div>
+    			<div id="czechoslovakia" data-pays="Czechoslovakia">Czechoslovakia : 1 title</div>
     			<div id="scotland" data-pays="Scotland">Scotland : 1 title</div>
     			<div id="romania" data-pays="Romania">Romania : 1 title</div>
     			<div id="serbia" data-pays="Serbia">Serbia : 1 title</div>
     			<div id="turkey" data-pays="Turkey">Turkey : 1 title</div>
     			<div id="ukraine" data-pays="Ukraine">Ukraine : 1 title</div>
     			<div id="belgium" data-pays="Belgium">Belgium : 1 title</div>
-    			<div id="outofeurope">Non-european : 37 titles</div>
+    			<div id="outofeurope">Non-european : 9 titles</div>
     		</div>
     	</div>
 
