--- a/foot-espagne/Version française/index.html
+++ b/foot-espagne/Version française/index.html
@@ -29,25 +29,25 @@
 
     		<div id="chart3"></div>
     		<div id="legende">
-    			<div id="italie" data-pays="Italie">Italie : 41 titres</div>
-    			<div id="allemagne" data-pays="Allemagne">Allemagne : 37 titres</div>
-    			<div id="espagne" data-pays="Espagne">Espagne : 37 titres</div>
-    			<div id="angleterre" data-pays="Angleterre">Angleterre : 23 titres</div>
-    			<div id="paysbas" data-pays="Pays-Bas">Pays-Bas : 14 titres</div>
-    			<div id="france" data-pays="France">France : 13 titres</div>
+    			<div id="italie" data-pays="Italie">Italie : 26 titres</div>
+    			<div id="espagne" data-pays="Espagne">Espagne : 26 titres</div>
+    			<div id="angleterre" data-pays="Angleterre">Angleterre : 20 titres</div>
+    			<div id="allemagne" data-pays="Allemagne">Allemagne : 19 titres</div>
+    			<div id="paysbas" data-pays="Pays-Bas">Pays-Bas : 8 titres</div>
     			<div id="portugal" data-pays="Portugal">Portugal : 6 titres</div>
-    			<div id="russie" data-pays="Russie/URSS">Russie/URSS : 6 titres</div>
-    			<div id="danemark" data-pays="Danemark">Danemark : 4 titres</div>
-    			<div id="grece" data-pays="Grèce">Grèce : 4 titres</div>
-    			<div id="tchecoslovaquie" data-pays="Tchécoslovaquie">Tchécoslovaquie : 4 titres</div>
+    			<div id="france" data-pays="France">France : 4 titres</div>
+    			<div id="russie" data-pays="Russie/URSS">Russie/URSS : 3 titres</div>
     			<div id="suede" data-pays="Suède">Suède : 2 titres</div>
+    			<div id="danemark" data-pays="Danemark">Danemark : 1 titre</div>
+    			<div id="grece" data-pays="Grèce">Grèce : 1 titre</div>
+    			<div id="tchecoslovaquie" data-pays="Tchécoslovaquie">Tchécoslovaquie : 1 titre</div>
     			<div id="ecosse" data-pays="Ecosse">Ecosse : 1 titre</div>
     			<div id="roumanie" data-pays="Roumanie">Roumanie : 1 titre</div>
     			<div id="serbie" data-pays="Serbie">Serbie : 1 titre</div>
     			<div id="turquie" data-pays="Turquie">Turquie : 1 titre</div>
     			<div id="ukraine" data-pays="Ukraine">Ukraine : 1 titre</div>
     			<div id="belgique" data-pays="Belgique">Belgique : 1 titre</div>
-    			<div id="horseurope">Pays hors Europe : 37 titres</div>
+    			<div id="horseurope">Pays hors Europe : 9 titres</div>
     		</div>
     	</div>
 
@@ -55,7 +55,6 @@
 		<script src="http://d3js.org/d3.v3.min.js"></script>
 		<script src="js/circularHeatChart.js"></script>
 		<script src="js/example.js"></script>
-		<script src="http://yandex.st/highlightjs/7.3/highlight.min.js"></script>
-		<script>hljs.initHighlightingOnLoad();</script>
+
 	</body>
 </html>
